--- a/src/VNEDC/chart/templates/chart/param_value_product.html
+++ b/src/VNEDC/chart/templates/chart/param_value_product.html
@@ -217,7 +217,7 @@ $(document).ready(function () {
     }
 
     .select2-container {
-        width: 170px !important; /* 设置Select2的宽度 */
+        width: 100% !important; /* 设置Select2的宽度 */
         height: 38px;
     }
 </style>
