--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -8,7 +8,7 @@
 }
 
 .select2-container {
-    width: 210px !important; /* 设置Select2的宽度 */
+    width: 100% !important; /* 设置Select2的宽度 */
 }
 </style>
 {% endblock css %}
