--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -38,6 +38,24 @@ Daily Production Information
         <form action="" method="POST" onSubmit="return validation()" id="record_form">
             {% csrf_token %}
             {% crispy form %}
+            <table border="1" class='table table-bordered table-striped'>
+                <tr>
+                    <th style="text-align: center">{% trans "Line" %}</th>
+                    <th>{% trans "Product" %}</th>
+                    <th style="text-align: center">{% trans "Size" %}</th>
+                    <th style="text-align: center">{% trans "Delete" %}</th>
+                </tr>
+                {% for info in daily_prod_info_heads %}
+                <tr>
+                    <td style="text-align: center">{{ info.line }}</td>
+                    <td>{{ info.product }}</td>
+                    <td style="text-align: center">{{ info.size }}</td>
+                    <td style="text-align: center">
+                        <a href="{% url 'daily_info_head_delete' info.pk %}" role="button" onclick="return confirm('{% trans "Are you sure?" %}')"><i class="fas fa-times"></i></a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
             <div class="row" style="padding-top: 20px;">
                 <div class="col-12" style="text-align: center">
                     <input class="btn btn-info" style="width:150px;height: 50px;" type="submit" value="{% trans "save" %}" />
