--- a/src/VNEDC/chart/templates/chart/param_value_product.html
+++ b/src/VNEDC/chart/templates/chart/param_value_product.html
@@ -13,10 +13,10 @@ Index
 {% endblock %}
 
 {% block base_js %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0/dist/chart.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{% static "chart.js/js/chart.min.js" %}"></script>
+<script src="{% static "chart.js/js/chartjs-plugin-datalabels@2.0.0.js" %}"></script>
+<link href="{% static "selects/css/select2.min.css" %}" rel="stylesheet" />
+<script src="{% static "selects/js/select2.min.js" %}"></script>
 <script>
 // Register the plugin to all charts:
 //Chart.register(ChartDataLabels);
