--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -13,8 +13,8 @@
 </style>
 {% endblock css %}
 {% block js %}
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<link href="{% static "selects/css/select2.min.css" %}" rel="stylesheet" />
+<script src="{% static "selects/js/select2.min.js" %}"></script>
 <script>
     function validation() {
         return true;
