--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -1,5 +1,6 @@
 {% extends 'collection/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% block css %}
 {% load i18n %}
 <style>
@@ -13,8 +14,8 @@
 </style>
 {% endblock css %}
 {% block js %}
-<link href="{% static "selects/css/select2.min.css" %}" rel="stylesheet" />
-<script src="{% static "selects/js/select2.min.js" %}"></script>
+<link href="{% static "select2/css/select2.min.css" %}" rel="stylesheet" />
+<script src="{% static "select2/js/select2.min.js" %}"></script>
 <script>
     function validation() {
         return true;
