--- a/src/VNEDC/collection/templates/collection/index.html
+++ b/src/VNEDC/collection/templates/collection/index.html
@@ -1,13 +1,38 @@
 {% extends 'collection/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block js %}
 <script>
-    function validation() {
-        return true;
-    }
-
+$(document).ready(function() {
+    $('#id_data_date').on('change', function () {
+        $('#session_form').attr('action', '{% url 'collection_index' %}');
+        $('#session_form').submit();
+    });
+});
 </script>
 {% endblock js %}
 {% block content %}
-
+<div class="row">
+    <div class="col-1"></div>
+    <div class="col-10">
+        <table border="1" class='table table-bordered table-striped'>
+            <tr>
+                <th style="text-align: center">{% trans "Machine" %}</th>
+                <th style="text-align: center">{% trans "Line" %}</th>
+                <th>{% trans "Product" %}</th>
+                <th style="text-align: center">{% trans "Size" %}</th>
+                <th style="text-align: center">{% trans "create_at" %}</th>
+            </tr>
+            {% for info in daily_prod_info_heads %}
+            <tr>
+                <td style="text-align: center">{{ info.mach_id }}</td>
+                <td style="text-align: center">{{ info.line }}</td>
+                <td>{{ info.product }}</td>
+                <td style="text-align: center">{{ info.size }}</td>
+                <td style="text-align: center">{{ info.create_at|date:"d/m/Y H:i" }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock content %}
