--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -140,7 +140,7 @@ function validate(evt) {
            {% endblock content %}
         </div>
         <div class="col-1">
-        {% if daily_prod_info_heads %}
+        {% if info %}
             {% if request.session.plant %}
             <a href="{% url 'daily_info_create' %}" class="btn btn-info" style="width:220px;">
                 {% trans 'Production Data' %}
