--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -40,6 +40,20 @@
                 $('#id_prod_name_b2').val(value).trigger('change');
             }
         });
+
+        $('#id_prod_size_a1').on('change', function() {
+            var value = $(this).val();
+            if ($('#id_prod_size_a2').val() === '') {
+                $('#id_prod_size_a2').val(value).trigger('change');
+            }
+        });
+
+        $('#id_prod_size_b1').on('change', function() {
+            var value = $(this).val();
+            if ($('#id_prod_size_b2').val() === '') {
+                $('#id_prod_size_b2').val(value).trigger('change');
+            }
+        });
     });
 </script>
 {% endblock js %}
