--- a/src/VNEDC/chart/templates/chart/param_value_product.html
+++ b/src/VNEDC/chart/templates/chart/param_value_product.html
@@ -15,8 +15,8 @@ Index
 {% block base_js %}
 <script src="{% static "chart.js/js/chart.min.js" %}"></script>
 <script src="{% static "chart.js/js/chartjs-plugin-datalabels@2.0.0.js" %}"></script>
-<link href="{% static "selects/css/select2.min.css" %}" rel="stylesheet" />
-<script src="{% static "selects/js/select2.min.js" %}"></script>
+<link href="{% static "select2/css/select2.min.css" %}" rel="stylesheet" />
+<script src="{% static "select2/js/select2.min.js" %}"></script>
 <script>
 // Register the plugin to all charts:
 //Chart.register(ChartDataLabels);
