--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -146,6 +146,9 @@ function validate(evt) {
                     <a class="box-nav-btn" href="{% url 'param_value_product' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Chart' %}">
                         <i class="fas fa-chart-bar"></i>
                     </a>
+                    <a class="box-nav-btn" href="{% url 'rd_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
+                        <i class="far fa-sticky-note"></i>
+                    </a>
                 </div>
             </div>
         </div>
