--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -27,15 +27,15 @@
             allowClear: true
         });
 
-        {% if mach.mold_type == "DOUBLE" %}
         $('#id_prod_name_a1').on('change', function() {
             var value = $(this).val();
-            if ($('#id_prod_name_a2').val() === '') {
-                $('#id_prod_name_a2').val(value).trigger('change');
+            if ($('#id_prod_name_b1').val() === '') {
+                $('#id_prod_name_b1').val(value).trigger('change');
             }
         });
 
-        $('#id_prod_name_b1').on('change', function() {
+        {% if mach.mold_type == "DOUBLE" %}
+        $('#id_prod_name_a2').on('change', function() {
             var value = $(this).val();
             if ($('#id_prod_name_b2').val() === '') {
                 $('#id_prod_name_b2').val(value).trigger('change');
