--- a/src/VNEDC/users/templates/users/login.html
+++ b/src/VNEDC/users/templates/users/login.html
@@ -153,9 +153,9 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center h-100">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header" style="background: #024A54">
                     <div class="p-2" style="text-align: center">
-                        <img src="{% static '/pictures/login_logo.jpg' %}" style="width:100%" />
+                        <img src="{% static '/base/logo.svg' %}" style="width:100%" />
                     </div>
                 </div>
                 <div class="card-body">
